--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Chivo:ital,wght@0,100..900;1,100..900&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Chivo:ital,wght@0,100..900;1,100..900&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -81,7 +81,7 @@
         <p class="margin-10-bottom">
           The font-size property can be assigned an absolute length:
         </p>
-        <div class="contain-5-list contain-list margin-10-bottom">
+        <div class="contain-list list-font-size margin-10-bottom">
           <ul>
             <li>mm : millimeters, e.g. 10mm.</li>
             <li>cm : centimeters, e.g. 1cm ( = 10mm).</li>
@@ -103,7 +103,7 @@
           IE.
         </p>
       </section>
-      <section class="contain-5">
+      <section class="contain-6 center-box">
         <h3>Relative Lengths</h3>
         <p class="margin-10-bottom">
           The font-size property can be assigned a unit that it relative to its
