--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <p class="margin-10-bottom">
           The font-size property can be assigned an absolute length:
         </p>
-        <div class="contain-list list-font-size margin-10-bottom">
+        <div class="list-font-size margin-10-bottom">
           <ul>
             <li>mm : millimeters, e.g. 10mm.</li>
             <li>cm : centimeters, e.g. 1cm ( = 10mm).</li>
@@ -109,7 +109,7 @@
           The font-size property can be assigned a unit that it relative to its
           parent's font size:
         </p>
-        <div class="contain-list list-font-size margin-10-bottom">
+        <div class="list-font-size margin-10-bottom">
           <ul>
             <li>
               em 1em is equivalent to the current font size, so 2em is twice as
@@ -214,6 +214,6 @@
         </div>
       </section>
     </article>
-    <footer>copyright &copy; 2025 GKvillain CS Sec 1</footer>
+    <footer>copyright &copy; 2025 hathaipat wisutthitam CS Sec 1</footer>
   </body>
 </html>
