--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <article>
       <header><h1>Css font-size : a definitive font-sizing guide</h1></header>
-      <section class="contain-1 center-box margin-30-bottom">
+      <section class="contain-1 center-box margin-40-bottom">
         <p>
           Font sizing in CSS sounds as though it should be easy. Until you try
           it. Many developers use the force; they tinker with the CSS font-size
@@ -23,7 +23,7 @@
           browser. A little understanding can go a long way…
         </p>
       </section>
-      <section class="contain-2">
+      <section class="contain-2 margin-40-bottom">
         <h3>The font-size Property</h3>
         <p>
           The font-size property can be set for any HTML tag (even if it would
@@ -33,7 +33,7 @@
           is especially important when you specify relative sizes.
         </p>
       </section>
-      <section class="contain-3">
+      <section class="contain-3 margin-40-bottom">
         <h3>Absolute Font Sizing Keywords</h3>
         <p class="margin-10-bottom">
           Several absolute font-sizing keywords are available. The font size is
@@ -57,7 +57,7 @@
           generally avoided by most developers.
         </p>
       </section>
-      <section class="contain-4">
+      <section class="contain-4 margin-40-bottom">
         <h3>Absolute Font Sizing Keywords</h3>
         <p class="margin-10-bottom">
           Two relative font-sizing keywords are available. The font is sized
@@ -76,7 +76,7 @@
           standard and browser results will differ.
         </p>
       </section>
-      <section class="contain-5">
+      <section class="contain-5 margin-40-bottom">
         <h3>Absolute Lengths</h3>
         <p class="margin-10-bottom">
           The font-size property can be assigned an absolute length:
@@ -103,7 +103,7 @@
           IE.
         </p>
       </section>
-      <section class="contain-6 center-box">
+      <section class="contain-6 center-box margin-40-bottom">
         <h3>Relative Lengths</h3>
         <p class="margin-10-bottom">
           The font-size property can be assigned a unit that it relative to its
@@ -168,30 +168,31 @@
 
           <a
             href="https://www.awwwards.com/20-best-web-fonts-from-google-web-fonts-and-font-face.html"
-            class="button"
+            class="button margin-40-bottom"
+            target="_blank"
             >ฟ้อนต์เพิ่มเติม -></a
           >
         </div>
         <div class="contain-7 center-box">
           <h5>Implementation</h5>
-          <p class="margin-10-bottom">
+          <p class="margin-20-bottom">
             It really is quick and simple: <br />
             1. Choose a font. You can add it to your collection or use
             “quick-use” to generate the code and options for that font. <br />
             2. Copy and paste the code generated into your
           </p>
-          <div class="show-text margin-10-bottom">
+          <div class="show-text margin-20-bottom">
             <pre>
 &lt;head&gt; &lt;link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine" /&gt &lt;/head&gt;</pre
             >
           </div>
-          <p class="margin-10-bottom">
+          <p class="margin-20-bottom">
             3. The font is now accessible in your CSS code
           </p>
-          <div class="show-text margin-10-bottom">
+          <div class="show-text margin-20-bottom">
             body { font-family: 'Tangerine', serif; font-size: 48px; }
           </div>
-          <p class="margin-10-bottom">
+          <p class="margin-20-bottom">
             <span>Embedding fonts using</span> the @font-face rule Fonts are
             hosted on the user's server independently of external services.
             @font-face was a deprecated CSS2 rule that has been re-introduced in
@@ -199,13 +200,14 @@
             A web font is a customized font which is supported by different
             browsers and comes in formats such as TTF, WOFF, EOT and SVG.
           </p>
-          <div class="show-text margin-10-bottom">
+          <div class="show-text margin-20-bottom">
             <pre>
 @font-face { font-family: 'ChunkFiveRegular'; src: url('Chunkfive-webfont.eot'); src: url('Chunkfive-webfont.eot?#iefix') format('embedded-opentype'), url('Chunkfive-webfont.woff') format('woff'), url('Chunkfive-webfont.ttf') format('truetype'), url('Chunkfive-webfont.svg#ChunkFiveRegular') format('svg'); font-weight: normal; font-style: normal; }</pre
             >
           </div>
-          <p>
-            เว็บไซต์ที่มา :<a
+          <p class="margin-40-bottom">
+            <span class="thai-font">เว็บไซต์ที่มา :</span
+            ><a
               href="https://www.awwwards.com/20-best-web-fonts-from-google-web-fonts-and-font-face.html"
             >
               https://www.awwwards.com/20-best-web-fonts-from-google-web-fonts-and-font-face.html
