--- a/index.html
+++ b/index.html
@@ -216,6 +216,6 @@
         </div>
       </section>
     </article>
-    <footer>copyright &copy; 2025 hathaipat wisutthitam CS Sec 1</footer>
+    <footer>copyright &copy; 2025 GKvillain CS Sec 1</footer>
   </body>
 </html>
