--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <article>
       <header><h1>Css font-size : a definitive font-sizing guide</h1></header>
-      <section class="contain-1 center-box margin-40-bottom">
+      <section class="contain-1 center-box">
         <p>
           Font sizing in CSS sounds as though it should be easy. Until you try
           it. Many developers use the force; they tinker with the CSS font-size
